# zsak

./: CLAUDE.md  Cargo.toml  README.md  setup.sh
config/: config.json5  default.json5  links.json5  sample.json5
script/: dictionary.py  weather.py
src/: action.rs  lib.rs  main.rs  parser.rs  types.rs
src/gui/: app.rs  bridge.rs  main.rs  session.rs
src/gui/views/: delete.rs  doctor.rs  graph.rs  list.rs  liveliness.rs  mod.rs  publish.rs  query.rs  queryable.rs  scout.rs  sidebar.rs  storage.rs  subscribe.rs
src/gui/widgets/: graph_canvas.rs  mod.rs  output_log.rs
