[package]
name = "zsak"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zenoh"
path = "src/main.rs"

[features]
video = ["opencv"]

[dependencies]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", features = ["unstable", "internal", "stats", "shared-memory"] }
clap = { version = "4.5.38", features = ["derive"] }
pyo3 = "0.25.0"
tokio = { version = "1.45.0", features = ["full"] }
colored = { version ="3.0.0"}
env_logger = "0.11.8"
opencv = { version = "0.94.4", optional = true}
